Fix pricing plans svg positioning on mobile and features list display block

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -732,17 +732,18 @@ section.privacy {
 	.pricing-plan-features {
 		min-height:90px; /* can be removed to obtain squared pricings */
 		text-align:left;
+		display:block;
 	}
 	
 	.pricing-plan-features li {
-		display: flex;
+		display: block;
 		align-items: center;
 	}
 	
 	.pricing-plan-features li:before {
 		content: '';
 		min-width: 20px;
-			height: 12px;
+		height: 12px;
 		margin-right: 4px;
 		display: inline-block;
 		background-image: url(../img/element_tick.svg);
